# VeriCode_AI

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugin/.claude-plugin/: plugin.json
plugin/skills/vendored-docs/: SKILL.md
scripts/: pydoc-to-md.py  rustdoc-json-to-md.py
src/vericode_ai/: cli.py  orchestrator.py  server.py
src/vericode_ai/analyzer/: diff_engine.py
src/vericode_ai/context/: builder.py
src/vericode_ai/ingestion/: chunker.py  python_parser.py  rust_parser.py
src/vericode_ai/retrieval/: embedder.py  ranker.py  vector_db.py
src/vericode_ai/router/: llm_router.py
src/vericode_ai/router/providers/: gemini_client.py  openai_client.py
src/vericode_ai/schema/: doc_chunk.py
src/vericode_ai/validator/: ast_validator.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
